test_suite/tests/ui/fail_non_static_lifetime.stderr
error[E0477]: the type `Me<'a>` does not fulfill the required lifetime
  --> $DIR/fail_non_static_lifetime.rs:3:10
   |
3  | #[derive(TypeInfo)]
   |          ^^^^^^^^ in this macro invocation
   |
  ::: $WORKSPACE/derive/src/lib.rs
   |
   | pub fn type_info(input: TokenStream) -> TokenStream {
   | --------------------------------------------------- in this expansion of `#[derive(TypeInfo)]`
   |
   = note: type must satisfy the static lifetime

error[E0477]: the type `&'a Me<'a>` does not fulfill the required lifetime
  --> $DIR/fail_non_static_lifetime.rs:3:10
   |
3  | #[derive(TypeInfo)]
   |          ^^^^^^^^ in this macro invocation
   |
  ::: $WORKSPACE/derive/src/lib.rs
   |
   | pub fn type_info(input: TokenStream) -> TokenStream {
   | --------------------------------------------------- in this expansion of `#[derive(TypeInfo)]`
   |
   = note: type must satisfy the static lifetime
